assets/css/style.css
/* IMPORT FONT (CODE TAKEN FROM GOOGLE FONTS) */
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
    margin: 0;
    border: 0;
    padding: 0;
    box-sizing: border-box;
    z-index: 0;
}

body {
    height: fit-content;
    background-color: #402C13;
    font-family: 'Playfair Display', sans-serif;
    font-style: italic;
}

/* HEADER STYLING */
header {
    position: fixed;
    top: 0;
    width: 100vw;
    height: 75px;
    background-color: black;
    color: #DFA201;
    text-transform: capitalize;
    z-index: 10;
}

#logo {
    position: inherit;
    display: inline;
    float: left;
    top: 15px;
    left: 15px;
    font-size: 100%;
}

#nav-bar {
    position: inherit;
    top: 3.5vh;
    right: 0;
    width: 380px;
    float: right;
    background: black;
}

#nav-menu {
    list-style-type: none;
    margin: 0 15px 35px 0;
}

#nav-menu li a {
    text-align: center;
    padding-left: 6px;
}

.current-page {
    border: 2px solid #DFA201;
    border-radius: 5px;
}

header a {
    position: relative;
    color: #DFA201;
    text-decoration: none;
    float: right;
    padding-right: 10px;
}

#nav-dropdown {
    background-color: rgba(0, 0, 0, 0);
    color: #DFA201;
    border: 2px solid #DFA201;
    border-radius: 5px;
    font-family: 'Playfair Display', sans-serif;
    font-size: larger;
    font-style: italic;
    font-weight: bold;
    float: right;
    margin-right: 20px;
    display: none;
}

/* FOOTER STYLING */
footer {
    position: fixed;
    bottom: 0px;
    width: 100vw;
    height: 75px;
    background-color: black;
    z-index: 10;
}

#media-links {
    position: relative;
    float: left;
    top: 20px;
}

#media-links a {
    color: #DFA201;
    padding-left: 20px;
}

#media-links i {
    font-size: 200%;
}

#footer-contact-link {
    position: relative;
    float: right;
    top: 5px;
    right: 15px;
    text-decoration: none;
    padding: 0 10px 0px 10px;
    color: #DFA201;
    font-size: 120%;
}



/* HOMEPAGE STYLING */
#home-bg {
    position: absolute;
    top: 75px;
    width: 100vw;
    min-height: calc(100vh - 150px);
    background-image: url(../images/terras-table_1920-900.webp);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/* ABOUT STYLING */
#about {
    text-align: center;
}

#about img {
    position: fixed;
    top: 100px;
    float: left;
    left: -4px;
    max-height: 560px;
    width: auto;
    border-radius: 0 20px 20px 0;
    border: 4px solid black;
}

#about-txt {
    position: relative;
    top: 75px;
    float: right;
    max-width: calc(100vw - 400px);
    padding: 25px;
    color: #cac2ab;
    height: auto;
    overflow-y: auto;
}

#about h2 {
    font-size: 250%;
    margin-top: 20px;
    padding-bottom: 20px;
}

#about p {
    position: relative;
    font-size: 175%;
    width: 100%;
    margin-bottom: 75px;
}

/* MENU STYLING */
#menu {
    min-height: auto;
    width: 100%;
    overflow: hidden;
}

#menu h3 {
    font-size: 250%;
    padding-top: 10px;
}
#menu p {
    font-size: 150%;
}
    /* MENU SIDEBAR STYLING */
#sidebar {
    position: fixed;
    top: 100px;
    float: left;
    left: -4px;
    height: 560px;
    width: 130px;
    background-color: #927E4D;
    color: #402C13;
    border-radius: 0 20px 20px 0;
    border: 4px solid black;
    text-align: center;

    animation-name: slide-bar;
    animation-duration: 1s;
    animation-fill-mode: forwards;
}
    /* SETUP SIDEBAR ANIMATION */
    @keyframes slide-bar {
        from    {left: -130px;}
        to      {left: -4px;}
    }

#sidebar ul {
    position: relative;

}

#sidebar li {
    margin-top: 65px;
    text-align: center;

}

#sidebar a {
    color: #402C13;
    text-decoration: none;
    font-size: 150%;
    min-width: 150px;
    padding: 0 10px 0 10px;

}

#sidebar a:hover {
    border: 2px solid #402C13;
    border-radius: 5px;
}

    /* STARTERS SECTION STYLING */
#starters-wrapper {
    min-height: 100vh;
    width: 100%;
}

#starters-txt {
    min-height: 100vh;
    position: absolute;
    top: 15vh;
    margin-left: 20%;
    text-align: center;
    color: #cac2ab;
}

#starters-img {
    position: absolute;
    top: 15vh;
    float: right;
    right: -4px;
    max-height: 70vh;
    width: auto;
    border-radius: 20px 0 0 20px;
    border: 4px solid black;    
}

    /* MAINS SECTION STYLING */
#mains-wrapper {
    min-height: 100vh;
    width: 100%;
    background-color: blue;
}

#mains-txt {
    min-height: 100vh;
    position: absolute;
    top: 115vh;
    margin-left: 20%;
    text-align: center;
    color: #cac2ab;
}

#mains-img {
    position: absolute;
    top: 115vh;
    float: right;
    right: -4px;
    max-height: 70vh;
    width: auto;
    border-radius: 20px 0 0 20px;
    border: 4px solid black;
}

    /* DESERTS SECTION STYLING */
#deserts-wrapper {
    min-height: 100vh;
    width: 100%;
    background-color: red;
}

#deserts-txt {
    min-height: 100vh;
    position: absolute;
    top: 215vh;
    margin-left: 20%;
    text-align: center;
    color: #cac2ab;
}

#deserts-img {
    position: absolute;
    top: 215vh;
    float: right;
    right: -4px;
    max-height: 70vh;
    width: auto;
    border-radius: 20px 0 0 20px;
    border: 4px solid black;
}

    /* DRINKS SECTION STYLING */
#drinks-wrapper {
    min-height: 100vh;
    width: 100%;
    background-color: green;
}

#drinks-txt {
    min-height: 100vh;
    position: absolute;
    top: 315vh;
    margin-left: 20%;
    text-align: center;
    color: #cac2ab;
}

#drinks-img {
    position: absolute;
    top: 315vh;
    float: right;
    right: -4px;
    max-height: 70vh;
    width: auto;
    border-radius: 20px 0 0 20px;
    border: 4px solid black;
}

    /* BITES SECTION STYLING */
#bites-wrapper {
    min-height: 100vh;
    width: 100%;
    background-color: purple;
}

#bites-txt {
    min-height: calc(100vh - 150px);
    position: absolute;
    top: 415vh;
    margin-left: 20%;
    text-align: center;
    color: #cac2ab;
}

#bites-img {
    position: absolute;
    top: 415vh;
    float: right;
    right: -4px;
    max-height: 70vh;
    width: auto;
    border-radius: 20px 0 0 20px;
    border: 4px solid black;
}

/* GALLERY STYLING */
#gallery {
    position: absolute;
    top: 10vh;
    line-height: 0;
    column-count: 3;
    column-gap: 10px;
}

#gallery img{
    width: 100%;
    margin: 5px 0 5px 0;
}

/* CONTACT STYLING */

#contact-wrapper {
   height: fit-content;
   overflow: hidden;
}

#contact h4 {
    font-size: 150%;
}
#contact h5 {
    font-size: 100%;
}

#iframe-wrapper {
    position: relative;
    width: 600px;
    height: 400px;
    top: 100px;
    left: -4px;
    border: 4px solid black;
    border-radius: 0 20px 20px 0;
    overflow: hidden;

}

#adress-wrapper {
    position: relative;
    top: 120px;
    left: -4px;
    height: 140px;
    width: 600px;
    border: 4px solid black;
    border-radius: 0 20px 20px 0;
    background-color: #927E4D;

}

#adress {
    position: relative;
    float: left;
    left: 5vw;
    top: 20px;
}

#contact-info {
    position: relative;
    float: left;
    left: 10vw;
    top: 20px;
}

#form-wrapper {
    position: relative;
    top: -440px;
    float: right;
    right: -4px;
    width: 600px;
    height: 560px;
    border: 4px solid black;
    border-radius: 20px 0 0 20px;
    background-color: #927E4D;
    color: black;
}

#form-header {
    height: 50px;
    width: auto;
    font-size: 200%;
    text-align: center;
    margin-bottom: 40px;
}

form label{
    position: relative;
    max-width: 300px;
    left: 30px;
    font-size: 200%;
}

form input {
    position: absolute;
    width: 310px;
    left: 240px;
    font-size: 155%;
    margin-top: 5px;
    border: 2px solid black;
    border-radius: 5px;
    font-family: 'Playfair Display', sans-serif;
    text-align: center;
}

form p {
    position: relative;
    top: 25px;
    text-align: center;
    font-size: 150%;
    padding-top: 50px;
}

/* RESPONSIVE DESIGN */

    /* NAV-BAR */
@media screen  {
    @media (max-width: 650px) {
        #nav-menu               { display: none; }
        #nav-dropdown           { display: inline-block;}
        #nav-bar                { width: auto;}  
      }
}
@media screen  {
    @media (max-width: 420px) {
        #logo                   {top: 5px; font-size: 80%; max-width: 50%; text-align: center;}
    }
}


    /* FOOTER */
@media screen  {
     @media (max-width: 420px) {
        #footer-contact-link    {font-size: 80%; top: 10px;}
        #media-links i          {font-size: 126%; padding-left: 0;}
    }
}

